--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/app.ts",
+    "test": "jest",
+    "test:watch": "jest --forceExit --watchAll",
+    "migrate": "node migrate.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +23,10 @@
     "@prisma/client": "^5.1.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.4.9",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "typescript": "^5.1.6"
   },
   "prisma": {
